refactor: mr 코멘트 반영
- Entity 클래스 내 @Setter 제거, helper 메서드로 대체
- DTO 클래스 내 Entity를 필드로 받지 않도록 수정
- api별 request, command, dto, response 분리
- 레이어 별 객체 변환을 위한 함수명 통일 ex) toXXXEntity() -> toEntity()
- PromptOption을 Long[] -> List<Long> 타입 변경
- api 호출에 대한 명시적 return 타입 없는 경우 Void 타입으로 설정
- RequestBody에 대한 valid 명시
- PathVariable name 명시
- PromptServiceImpl 내 필드 일관성 있게 선언
- PromptService 인터페이스 내에서 정의된 함수 외 helper 메서드 접근자 public -> private 변경